# wxWidgets-vscode-template

./: CMakeLists.txt  README.md
src/: main.cpp
